# rusty-diesel-rocket

./: .gitignore  Cargo.toml  diesel.toml
migrations/2021-08-19-094248_create_bgc_types_table/: down.sql  up.sql
migrations/2021-08-19-103804_create_taxa/: down.sql  up.sql
migrations/2021-08-19-104031_create_entry/: down.sql  up.sql
migrations/2021-11-19-122306_submitters/: down.sql  up.sql
migrations/2022-04-01-091745_create_tokens_table/: up.sql
migrations/2022-04-16-124524_create_submissions/: down.sql  up.sql
src/: errors.rs  main.rs  models.rs  repo.rs  req.rs  schema.rs  submission.rs  token.rs  user.rs  utils.rs
src/models/: db.rs  schema.rs
src/models/db/: submission_requests.rs  submissions.rs  submitters.rs  taxa.rs  tokens.rs
src/models/legacy_schema/: genes.rs  other.rs  polyketide.rs  publication.rs  saccharide.rs
src/models/schema/: alkaloid.rs  compound.rs  nrp.rs  ripp.rs  terpene.rs
src/req/: approve.rs  create.rs  delete.rs  list.rs
src/user/: add.rs  common.rs  delete.rs  edit.rs  list.rs
src/utils/: db.rs  taxa.rs  typedefs.rs
src/utils/typedefs/: types.rs
src/web/: handlers.rs  routes.rs
src/web/handlers/: user.rs
