[package]
name = "mibig-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
chrono = "0.4"
diesel = { version = "1.4.4", features = ["chrono", "postgres"] }
dotenv = "0.15.0"
structopt = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
data-encoding = "2.3.2"
rand = "0.8.5"
bcrypt = "0.10"
rpassword = "5.0"
exitcode = "1.1.2"
mibig-taxa = "0.1"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]
